--- a/css/styles.css
+++ b/css/styles.css
@@ -7,11 +7,11 @@ h1 {
 } 
 
 body{ 
-    background-image: url(https://imgur.com/AgAHnKx.jpg); 
+    background-image: url(https://res.cloudinary.com/dt5zbnwvr/image/upload/v1626107017/stephen-fang-jcsDOZgKsm0-unsplash_lp4nzx.jpg); 
     background-repeat: no-repeat;
 	background-position: center; 
 	background-size: cover;  
-    height: 100vh; 
+    height: 100%; 
     margin:0; 
 }
 
@@ -21,21 +21,93 @@ ul {
     flex-direction: row;  
     justify-content: space-between;
     list-style-type: none;
-    padding: 20px 30px 0px 1300px; 
  }
 
 a{
     display: flex; 
-    color:brown; 
+    color:white; 
     text-decoration:brown;
     font-size: 20px;
 }
 
 img{
-     padding-left: 200px;
      border-radius: 8px;  
 }
 
-.bubble p{ 
-  color:white; 
+
+.Introduction img{
+    height: 200px; 
+    width:155px; 
 }
+
+.Introduction{
+    display:inline-flex; 
+    margin-left: 10%; 
+}
+p.speech{
+    position: relative;
+    background: #6594bf; opacity: 0.8;
+    margin-left: 20px; 
+    margin-top:-10px; 
+    color:white; 
+    font-family: Arial;
+    font-size: 20px;
+    box-shadow: 2px 2px 2px 0px #A3A3A3 ;
+    text-align: center;
+    width: 420px;
+    height: 200px;
+    border-radius: 22px;
+    padding: 10px;
+}
+p.speech:after {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 0;
+    z-index: 1;
+    border-style: solid;
+    border-color: #6594bf transparent;
+    border-width: 10px 11px 0;
+    bottom: -10px;
+    left: 30%;
+    margin-left: -11px;
+}
+
+
+.timeline {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin: 5% auto;
+    background-color: white;opacity: 0.7; 
+    font-family: Helvetica, sans-serif;
+}
+
+.timeline {
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  
+  
+  .timeline::after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    background-color: white;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
+  }
+  
+  
+  
+  @media (max-width: 786px) {
+    .timeline__event {
+      flex-direction: column;
+    }
+    .timeline__event__icon {
+      border-radius: 4px 4px 0 0;
+    }
+  }
