--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,11 @@ h1 {
     padding: 10px; 
 } 
 
+h2{ 
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    color:saddlebrown; 
+    text-align: center; 
+}
 body{ 
     background-image: url(https://res.cloudinary.com/dt5zbnwvr/image/upload/v1626107017/stephen-fang-jcsDOZgKsm0-unsplash_lp4nzx.jpg); 
     background-repeat: no-repeat;
@@ -77,7 +82,7 @@ p.speech:after {
 .timeline {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 70%;
     margin: 5% auto;
     background-color: white;opacity: 0.7; 
     font-family: Helvetica, sans-serif;
