--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ h2{
       color: white;
     text-align: center; 
 }
+
 body{ 
     background-image: url(https://res.cloudinary.com/dt5zbnwvr/image/upload/v1626107017/stephen-fang-jcsDOZgKsm0-unsplash_lp4nzx.jpg); 
     background-repeat: no-repeat;
@@ -57,7 +58,7 @@ p.speech{
     margin-right: 5px;
     margin-top:-10px; 
     color:white; 
-    font-family: Arial;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 20px;
     box-shadow: 2px 2px 2px 0px #A3A3A3 ;
     text-align: center;
@@ -80,7 +81,7 @@ p.speech:after {
 #team.page-section{
     text-align:center;
 }
-/*Hides text in bubble on mobile++*/
+/*Hides text in bubble on mobile+*/
 @media (max-width: 767px) {
     .hidden-mobile {
       display: none;
@@ -105,7 +106,7 @@ body {
 }
 
 .container {
-  max-width: 650px;
+  max-width: 680px;
   margin: 50px auto;
 }
 
@@ -330,29 +331,29 @@ img::-moz-selection {
 
 .btn-xl {
   font-size: 18px;
-  padding: 20px 40px;
+  padding: 20px 10px;
 }
 
 .footer {
-  padding: 25px 0;
+  padding: 15px 0;
   text-align: center;
 }
 
 .footer span.copyright {
-  font-size: 90%;
+  font-size: 100%;
   line-height: 40px;
-  text-transform: none;
+  /* text-transform: none; */
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 .footer ul.quicklinks {
   font-size: 90%;
-  line-height: 40px;
+  line-height: 10px;
   margin-bottom: 0;
   text-transform: none;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
-
+/* social buttons */
 ul.social-buttons {
   margin-bottom: 0;
 }
@@ -371,5 +372,54 @@ ul.social-buttons li a {
 }
 
 ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons li a:hover {
-  background-color:saddlebrown;
+  background-color:black;
 }
+
+/* project cards */
+.page-section #projects{
+    text-align:center; 
+    margin-left: auto;
+    margin-right: auto;
+    width:80%; 
+    padding: 10px;
+    display: grid;
+    gap: 20px;
+}
+
+#projects .link{
+    color:black; 
+    margin-left: 45px;
+}
+
+/* contact form */
+#contact input{
+        width: 100%;
+        background-color:white; 
+        padding: 12px 20px;
+        margin: 8px 0;
+        box-sizing: border-box;
+        font-size: 25px;
+        border: 2px solid #ccc;
+}
+
+#contact textarea{
+    width: 100%;
+    background-color:white; 
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    font-size: 25px;
+    border: 2px solid #ccc;
+}
+
+#contact button{
+    width: 50%; 
+    background-color:sienna;
+    border: none;
+    color: white;
+    padding: 16px 16px;
+    text-decoration: none;
+    margin: 4px 4px;
+    cursor: pointer;
+}
+
