--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ h2{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
       color: white;
       text-align: center; 
-      font: size 25px;
+      font: size 20px;
 }
 
 h3{
@@ -23,7 +23,7 @@ body{
 	background-position: center; 
 	background-size: cover;  
     height: 100%; 
-    margin:0; 
+    margin:0px;  
 }
 
 ul { 
@@ -33,12 +33,12 @@ ul {
     list-style-type: none;
  }
 
-a{
+/* a{
     display: flex; 
     color:white; 
     text-decoration:brown;
     font-size: 20px;
-}
+} */
 
 img{
      border-radius: 8px;  
@@ -55,6 +55,7 @@ img{
     display:inline-flex; 
     margin-left: 10%; 
 }
+
 p.speech{
     position: relative;
     background: #6594bf; opacity: 0.8;
@@ -278,6 +279,7 @@ p {
   background-color: #555353;
 }
 
+
 #profile.page-section{
   padding: 100px 0;
 
@@ -336,73 +338,53 @@ img::-moz-selection {
   color:white; 
 }
 
-.footer {
-  padding: 15px 0;
-  text-align: center;
-}
-
-.footer span.copyright {
-  font-size: 100%;
-  line-height: 40px;
-  /* text-transform: none; */
-  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-}
-
-.footer ul.quicklinks {
-  font-size: 90%;
-  line-height: 10px;
-  margin-bottom: 0;
-  text-transform: none;
-  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-}
-/* social buttons */
-ul.social-buttons {
-  margin-bottom: 0;
-}
-
-ul.social-buttons li a {
-  font-size: 20px;
-  line-height: 50px;
-  display: block;
-  width: 50px;
-  height: 50px;
-  transition: all 0.3s;
-  color: white;
-  border-radius: 100%;
-  outline: none;
-  background-color:white;
-}
-
-ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons li a:hover {
-  background-color:black;
-}
 
 /* project cards */
-.page-section #projects{
+.page-section #projects {
     text-align:center; 
     margin-left: auto;
     margin-right: auto;
-    width:80%; 
-    padding: 10px;
+    width:100%; 
+    height: 40%; 
+    padding: 30px 10px 60px 10px; 
     display: flex;
     flex-direction:row; 
     flex-wrap:wrap; 
     margin:0 auto; 
+    justify-content: space-around;
+    align-content: flex-end;
+    opacity: .9;
+}
+
+#projects h2{
+    margin-bottom: -15px;
+}
+
+
+#projects img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
 #projects .link{
     color:black; 
-    margin-left: 45px;
 }
-/* #projects .section-heading{
-    margin:0 auto; 
-} */
+
+
+
 /* contact form */
+#contact h2{
+    margin-bottom: 50px;
+}
+
+
+
 #contact input{
         width: 100%;
         background-color:white; 
-        padding: 12px 20px;
-        margin: 8px 0;
+        padding: 20px 20px;
+        /* margin:  0; */
         box-sizing: border-box;
         font-size: 20px;
         border: 2px solid #ccc;
@@ -432,5 +414,52 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
 #contact label{
     color:white; 
     font-size: 20px;
+    gap:10px; 
 }
 
+.footer .Copyright{
+    color:white;
+    margin: top -30px;
+}
+
+.footer {
+    padding: 15px 0;
+    text-align: center;
+  }
+  
+  .footer span.copyright {
+    font-size: 100%;
+    line-height: 40px;
+    /* text-transform: none; */
+    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  }
+  
+  .footer ul.quicklinks {
+    font-size: 90%;
+    line-height: 10px;
+    margin-bottom: 0;
+    text-transform: none;
+    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  }
+
+  /* social buttons */
+  ul.social-buttons {
+    margin-bottom: 0;
+  }
+  
+  ul.social-buttons li a {
+    font-size: 20px;
+    line-height: 50px;
+    display: block;
+    width: 50px;
+    height: 50px;
+    transition: all 0.3s;
+    color: white;
+    border-radius: 100%;
+    outline: none;
+    background-color:white;
+  }
+  
+  ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons li a:hover {
+    background-color:black;
+  }
